stop the message board from jumping around

--- a/src/index.css
+++ b/src/index.css
@@ -214,6 +214,7 @@ a {
 .invalidWordContainer {
   height: 35px;
   text-align: center;
+  max-width: 344px;
 }
 
 
